unpackaged/main/default/objects/Case/fields/Account_Temp_ExternalField__c.field-meta.xml
<CustomField>
    <fullName>Account_Temp_ExternalField__c</fullName>
    <label>Account Temp ExternalField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>