unpackaged/main/default/objects/Case/fields/Agent_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Agent_Mobile__c</fullName>
    <description>Denotes the agent mobile number</description>
    <formula>Account.PersonContact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Denotes the agent mobile number</inlineHelpText>
    <label>Agent Mobile</label>
    <type>Text</type>
</CustomField>