unpackaged/main/default/objects/Case/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <description>Denotes the name of the agent</description>
    <inlineHelpText>Denotes the name of the agent</inlineHelpText>
    <label>Caller Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>