unpackaged/main/default/objects/Case/fields/Business_Channel__c.field-meta.xml
<CustomField>
    <fullName>Business_Channel__c</fullName>
    <label>Business Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2C Assisted Sales</fullName>
                <default>true</default>
                <label>B2C Assisted Sales</label>
            </value>
            <value>
                <fullName>B2C Self-Serve</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>