unpackaged/main/default/objects/Case/fields/Caller_Type__c.field-meta.xml
<CustomField>
    <fullName>Caller_Type__c</fullName>
    <label>Caller Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>