unpackaged/main/default/objects/Case/fields/Campaign_Action_Message__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Action_Message__c</fullName>
    <description>Stores success and error message.</description>
    <label>Campaign Action Message</label>
    <type>TextArea</type>
</CustomField>