unpackaged/main/default/objects/Case/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates case with a campaign.</description>
    <label>Campaign Name</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>