unpackaged/main/default/objects/Case/fields/Case_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Category__c</fullName>
    <description>Denotes sub category of the case</description>
    <inlineHelpText>Denotes sub category of the case</inlineHelpText>
    <label>Case Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Account/Contact Data Not Synced issue</fullName>
            </value>
            <value>
                <fullName>Account Inquiry</fullName>
            </value>
            <value>
                <fullName>Account Suspension/Termination</fullName>
            </value>
            <value>
                <fullName>Ad Credit Log</fullName>
            </value>
            <value>
                <fullName>Add/Remove Agency</fullName>
            </value>
            <value>
                <fullName>Add Campaign Member</fullName>
            </value>
            <value>
                <fullName>AdminNet</fullName>
            </value>
            <value>
                <fullName>AdminNet - Account Record not sync</fullName>
            </value>
            <value>
                <fullName>AdminNet Issue</fullName>
            </value>
            <value>
                <fullName>Agency CEA Check Failed</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Agent CEA Check Failed</fullName>
            </value>
            <value>
                <fullName>Agent Error</fullName>
            </value>
            <value>
                <fullName>AgentNet</fullName>
            </value>
            <value>
                <fullName>Agent Verification</fullName>
            </value>
            <value>
                <fullName>Approval ByPass</fullName>
            </value>
            <value>
                <fullName>Approval Process Error</fullName>
            </value>
            <value>
                <fullName>Automated Email Reply</fullName>
            </value>
            <value>
                <fullName>Auto-Repost</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Billing Receipt</fullName>
            </value>
            <value>
                <fullName>Boost</fullName>
            </value>
            <value>
                <fullName>Call Dropped</fullName>
            </value>
            <value>
                <fullName>Campaign Inquiry</fullName>
            </value>
            <value>
                <fullName>Click Approval</fullName>
            </value>
            <value>
                <fullName>Close Lost Opportunity</fullName>
            </value>
            <value>
                <fullName>Commercial Guru</fullName>
            </value>
            <value>
                <fullName>Concurrent Listing</fullName>
            </value>
            <value>
                <fullName>Consumer Record Conflict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>