unpackaged/main/default/objects/Case/fields/CEA_License__c.field-meta.xml
<CustomField>
    <fullName>CEA_License__c</fullName>
    <description>Denotes the CEA license number of the agent</description>
    <inlineHelpText>Denotes the CEA license number of the agent</inlineHelpText>
    <label>Agent Identification Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>