unpackaged/main/default/objects/Case/fields/Created_For_Gearset_Trial__c.field-meta.xml
<CustomField>
    <fullName>Created_For_Gearset_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pls ignore as this is only used for poc purpose</description>
    <label>Created For Gearset Trial</label>
    <type>Checkbox</type>
</CustomField>