unpackaged/main/default/objects/Case/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Denotes email address of the case</description>
    <inlineHelpText>Denotes email address of the case</inlineHelpText>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>