unpackaged/main/default/objects/Case/fields/Estimated_Effort_hour__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Effort_hour__c</fullName>
    <label>Estimated Effort (hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>