unpackaged/main/default/objects/Case/fields/Exception_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Exception_Remarks__c</fullName>
    <label>Exception Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>