unpackaged/main/default/objects/Case/fields/My_Raised_Cases__c.field-meta.xml
<CustomField>
    <fullName>My_Raised_Cases__c</fullName>
    <description>If TRUE, the requester will be equal to the logged in user. For the user to review all the cases raised by them.</description>
    <formula>IF( Requester__r.Id = $User.Id , TRUE, FALSE)</formula>
    <inlineHelpText>If TRUE, the requester will be equal to the logged in user. For the user to review all the cases raised by them.</inlineHelpText>
    <label>My Raised Cases</label>
    <type>Checkbox</type>
</CustomField>