unpackaged/main/default/objects/Case/fields/Owner_Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Owner_Subsidiary__c</fullName>
    <description>Denotes the Subsidiary of the owner</description>
    <formula>TEXT(Owner:User.Subsidiary__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Denotes the Subsidiary of the owner</inlineHelpText>
    <label>Owner Subsidiary</label>
    <type>Text</type>
</CustomField>