unpackaged/main/default/objects/Case/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Denotes the phone number of the agent</description>
    <inlineHelpText>Denotes the phone number of the agent</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>