unpackaged/main/default/objects/Case/fields/Requester_Department__c.field-meta.xml
<CustomField>
    <fullName>Requester_Department__c</fullName>
    <description>Denotes the department of requester,system automatically look up the department of the user (requester)</description>
    <inlineHelpText>Denotes the department of requester</inlineHelpText>
    <label>Requester - Department</label>
    <length>50</length>
    <type>Text</type>
</CustomField>