unpackaged/main/default/objects/Case/fields/Requester_Division__c.field-meta.xml
<CustomField>
    <fullName>Requester_Division__c</fullName>
    <description>Denotes the division of requester, system automatically look up the division of the user (requester)</description>
    <inlineHelpText>Denotes the division of requester</inlineHelpText>
    <label>Requester - Division</label>
    <length>50</length>
    <type>Text</type>
</CustomField>