unpackaged/main/default/objects/Case/fields/Requester_Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Requester_Subsidiary__c</fullName>
    <description>Denotes the division of requester, system automatically look up the subsidiary of the user (requester)</description>
    <inlineHelpText>Denotes the division of requester</inlineHelpText>
    <label>Requester - Subsidiary</label>
    <length>50</length>
    <type>Text</type>
</CustomField>