unpackaged/main/default/objects/Case/fields/Resolution_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Remarks__c</fullName>
    <label>Resolution Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>