unpackaged/main/default/objects/Case/fields/SDP_Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>SDP_Ticket_No__c</fullName>
    <description>SDP Ticket Number</description>
    <label>SDP Ticket No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>