unpackaged/main/default/objects/Case/fields/SDP_Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>SDP_Ticket_Status__c</fullName>
    <description>Denotes the status of the ticket raised in JIRA App Support Service Desk</description>
    <inlineHelpText>Denotes the status of ticket raised in JIRA App Support Service Desk</inlineHelpText>
    <label>Service Desk Ticket Additional Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>