unpackaged/main/default/objects/Case/fields/Service_Desk_Ticket_URL__c.field-meta.xml
<CustomField>
    <fullName>Service_Desk_Ticket_URL__c</fullName>
    <description>The URL of the Ticket raised in JIRA App Support Service Desk</description>
    <inlineHelpText>The URL of the raised JIRA App Support Service Desk ticket.</inlineHelpText>
    <label>Service Desk Ticket URL</label>
    <type>Url</type>
</CustomField>