unpackaged/main/default/objects/Case/recordTypes/Customer_Care.recordType-meta.xml
<RecordType>
    <fullName>Customer_Care</fullName>
    <active>true</active>
    <businessProcess>Customer Care</businessProcess>
    <label>Customer Care</label>
</RecordType>