unpackaged/main/default/objects/Case/recordTypes/Customer_Care_Default.recordType-meta.xml
<RecordType>
    <fullName>Customer_Care_Default</fullName>
    <active>true</active>
    <businessProcess>Customer Care</businessProcess>
    <label>Customer Care Default</label>
</RecordType>