unpackaged/main/default/objects/Case/recordTypes/Sales_Enablement.recordType-meta.xml
<RecordType>
    <fullName>Sales_Enablement</fullName>
    <active>true</active>
    <businessProcess>Sales Enablement</businessProcess>
    <description>To support sales enablement inquiries from Sales Teams both B2B and B2C</description>
    <label>Sales Enablement</label>
</RecordType>