unpackaged/main/default/objects/Case/validationRules/Campaign_and_Contact_is_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_and_Contact_is_blank</fullName>
    <active>true</active>
    <description>When the case is marked as resolved but campaign or contact is null.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Type, &#39;Campaign Support&#39;),
!ISPICKVAL(Case_Sub_Category__c, &#39;Others&#39;),
ISPICKVAL(Resolution__c, &#39;Resolved&#39;),
OR(
ISBLANK(Campaign_Name__c),
ISBLANK(ContactId)
),
RecordType.DeveloperName = &#39;Sales_Enablement&#39;
)</errorConditionFormula>
    <errorMessage>Please fill Campaign Name and Related Agents to mark case as resolved.</errorMessage>
</ValidationRule>