unpackaged/main/default/objects/Case/validationRules/change_owner_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>change_owner_restriction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				RecordType.DeveloperName=&#39;Sales_Enablement&#39;,
NOT(ISNEW()),
OR($Profile.Name =&#39;B2C Sales User&#39;,
$Profile.Name =&#39;MY B2C Sales User&#39;,
$Profile.Name =&#39;TH B2C Sales User&#39;),
 NOT(Owner:Queue.DeveloperName=&#39;Sales_Enablement&#39;),
				NOT(CONTAINS($Label.PG_LABEL_OwnerChange, $User.Alias)),
ISCHANGED(OwnerId))</errorConditionFormula>
    <errorMessage>You don&#39;t have Access to update these fields.</errorMessage>
</ValidationRule>