unpackaged/main/default/objects/Case/validationRules/Country_is_not_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_is_not_editable</fullName>
    <active>true</active>
    <description>Only Admin and Customer Care can update the country</description>
    <errorConditionFormula>ISCHANGED(Country__c) &amp;&amp; PRIORVALUE(Country__c) &lt;&gt; &#39;&#39;
&amp;&amp; $Profile.Name &lt;&gt; &#39;Customer Care&#39;
&amp;&amp; $Profile.Name &lt;&gt; &#39;MY Customer Care&#39;
&amp;&amp; $Profile.Name &lt;&gt; &#39;TH Customer Care&#39;
&amp;&amp; !$Permission.System_Admin_Compliance_Access
&amp;&amp; RecordType.DeveloperName=&#39;Customer Care&#39;</errorConditionFormula>
    <errorMessage>Insufficient access to update country</errorMessage>
</ValidationRule>