unpackaged/main/default/objects/Case/validationRules/Resolution_is_blank_when_case_is_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_is_blank_when_case_is_closed</fullName>
    <active>true</active>
    <description>Resolution should not be blank when case status is marked as closed.</description>
    <errorConditionFormula>AND(
TEXT(Type) =&#39;Campaign Support&#39;,
TEXT(Status) = &#39;Closed&#39;,
ISBLANK(TEXT(Resolution__c)),
RecordType.DeveloperName = &#39;Sales_Enablement&#39;
)</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>Please fill resolution to mark case status as closed.</errorMessage>
</ValidationRule>