unpackaged/main/default/objects/Case/validationRules/Restrict_Trade_Marketing_User_to_upd_acc.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Trade_Marketing_User_to_upd_acc</fullName>
    <active>true</active>
    <description>Allow Trade Marketing users to update account on case when case is open and they are the owner.</description>
    <errorConditionFormula>AND(
ISCHANGED(AccountId),
RecordType.DeveloperName = &quot;Sales_Enablement&quot;,
$Profile.Name = &quot;Trade Marketing&quot;,
OR(
NOT(
OwnerId =$User.Id),
NOT(
OR(
ISPICKVAL(Status , &quot;New&quot;),
ISPICKVAL(Status , &quot;Working&quot;),
ISPICKVAL(Status , &quot;Pending Information&quot;)
)
)
)
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>You can only update Account Name when case is open and you are the owner of the case.</errorMessage>
</ValidationRule>