unpackaged/main/default/objects/Case/listViews/All_Closed_Case.listView-meta.xml
<ListView>
    <fullName>All_Closed_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>NAME</columns>
    <columns>Agent_Name__c</columns>
    <columns>Agent_Mobile__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Case_Age_Days__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>Case_Sub_Category__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Internal_External__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Customer_Care,Case.Customer_Care_Default</value>
    </filters>
    <label>CustCare - All Closed Case</label>
    <queue>Customer_Care_MY</queue>
</ListView>