unpackaged/main/default/objects/Case/listViews/All_Closed_Customer_Care_SG_Queue.listView-meta.xml
<ListView>
    <fullName>All_Closed_Customer_Care_SG_Queue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>NAME</columns>
    <columns>Agent_Name__c</columns>
    <columns>Agent_Mobile__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Case_Age_Days__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>Case_Sub_Category__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Internal_External__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Case_Sub_Category__c</field>
        <operation>equals</operation>
    </filters>
    <label>Cust Care - All Closed - SG Queue</label>
    <sharedTo>
        <role>MY_Cust_Care_Rep</role>
        <role>MY_Cust_Care_Team_Lead</role>
        <role>SG_Customer_Care_Rep</role>
    </sharedTo>
</ListView>