unpackaged/main/default/objects/Case/listViews/All_Open_Ad_Ops_Queue.listView-meta.xml
<ListView>
    <fullName>All_Open_Ad_Ops_Queue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Ad-Ops,Devendra</value>
    </filters>
    <label>All Open Ad-Ops Queue</label>
</ListView>